fix: fix cart overflow

--- a/src/modules/user-bar/user-bar.scss
+++ b/src/modules/user-bar/user-bar.scss
@@ -1,4 +1,5 @@
 .user-bar {
+  padding-right: 15px;
 
   &__list {
     display: flex;
